@@ -95,7 +95,11 @@ Type: select
 Listorder: lexicographic
 #  Translators, ignore leading exclamation mark,
 __Choices: !enter information manually, AT, AU, BE, BG, BR, BY, CA, CH, CL, CN, CR, CZ, DE, DK, EE, ES, FI, FR, GB, GR, HK, HR, HU, ID, IE, IL, IN, IS, IT, JP, KR, LT, LU, LV, MX, NI, NL, NO, NZ, PL, PT, RO, RU, SE, SG, SI, SK, TR, TW, UA, US, ZA
-_Default: US
+#  Translators, you must not translate this value, but you can change it
+#  to one of those listed above, e.g. msgstr "GB".  Square brackets are
+#  ignored and appear here only to distinguish this msgid from the same
+#  one in the Choices field.
+_Default: US[ Default value]
 _Description: Use a mirror from what country?
  The goal is to find a mirror that is close to you on the network -- be
  aware that nearby countries, or even your own, may not be the best choice.
@@ -105,7 +109,11 @@ Type: select
 Listorder: lexicographic
 #  Translators, ignore leading exclamation mark,
 __Choices: !enter information manually, AT, AU, BE, BG, BR, BY, CA, CH, CL, CN, CR, CZ, DE, DK, EE, ES, FI, FR, GB, GR, HK, HR, HU, ID, IE, IN, IS, IT, JP, KR, LT, LU, LV, MX, NL, NO, NZ, PL, PT, RO, RU, SE, SG, SI, SK, TH, TR, TW, UA, US, ZA
-_Default: US
+#  Translators, you must not translate this value, but you can change it
+#  to one of those listed above, e.g. msgstr "GB".  Square brackets are
+#  ignored and appear here only to distinguish this msgid from the same
+#  one in the Choices field.
+_Default: US[ Default value]
 _Description: Use a mirror from what country?
  The goal is to find a mirror that is close to you on the network -- be
  aware that nearby countries, or even your own, may not be the best choice.
